# Gra-Czasu-Rzeczywistego

./: .gitignore  CMakeLists.txt  CppProperties.json  Opis.docx  README.md  sieci.docx
klient/include/raygui/: raygui.h
klient/include/raylib/: raylib-cpp.hpp
klient/src/: main.cpp
klient/src/Board/: Board.cpp  Board.h  WindowManager.h
klient/src/GameManager/: Game.h  GameManager.cpp  GameManager.h
klient/src/GameManager/stages/: GameStage1.cpp  GameStage1.h  GameStageLogin.cpp  GameStageLogin.h  GameStageQueue.cpp  GameStageQueue.h  GameStageSelect.cpp  GameStageSelect.h
klient/src/Player/: MoveAble.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  SelfPlayer.cpp  SelfPlayer.h
klient/src/Sockets/: SocketHandling.cpp  SocketHandling.hpp  SocketInfo.h
networking/src/: Packets.h
resources/: sound.rfx
serwer/src/: Libraries.hpp  Structures.hpp  main.cpp
serwer/src/Game/: ClientThread.cpp  ClientThread.hpp  GameMain.cpp  GameMain.hpp
serwer/src/Game/Player/: Player.cpp  Player.hpp
serwer/src/Lobby/: Lobby.cpp  Lobby.hpp  Queue.cpp  Queue.hpp
serwer/src/Sockets/: ServerSocketHandling.cpp  ServerSocketHandling.hpp
